--- a/angular/src/app/view/verification/verification.component.html
+++ b/angular/src/app/view/verification/verification.component.html
@@ -23,7 +23,7 @@
                             <button class="btn btn-success" [disabled]="verified()" (click)="publish()">Publish</button>
                         </div>
                     </div>
-                    <div class="row">
+                    <fieldset disabled class="row">
                         <div class="form-group">
                             <mat-form-field>
                                 <mat-label>Batch Id</mat-label>
@@ -38,7 +38,7 @@
                                 </mat-form-field>
                             </div>  
                         </div>
-                    </div>
+                    </fieldset>
                     <div class="row">  
                         <div class="form-group">
                             <mat-form-field>
