--- a/angular/src/app/view/resulting/resulting.component.html
+++ b/angular/src/app/view/resulting/resulting.component.html
@@ -26,58 +26,64 @@
                             </button>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="form-group">
-                            <mat-form-field>
-                                <mat-label>Batch Id</mat-label>
-                                <input matInput formControlName="batchId" id = "batchId">
-                            </mat-form-field>
-                        </div>
-                        <div class="form-group">        
-                            <div class="form-group" formGroupName="lab">
+                    <fieldset disabled>
+                        <div class="row">
+                            <div class="form-group">
                                 <mat-form-field>
-                                    <mat-label>Lab</mat-label>
-                                    <input matInput formControlName="name"  id = "lab">
+                                    <mat-label>Batch Id</mat-label>
+                                    <input matInput formControlName="batchId" id = "batchId">
                                 </mat-form-field>
-                            </div>  
+                            </div>
+                            <div class="form-group">        
+                                <div class="form-group" formGroupName="lab">
+                                    <mat-form-field>
+                                        <mat-label>Lab</mat-label>
+                                        <input matInput formControlName="name"  id = "lab">
+                                    </mat-form-field>
+                                </div>  
+                            </div>
                         </div>
-                    </div>
+                    </fieldset>
                     <div class="row">  
-                        <div class="form-group">
+                        <fieldset disabled class="form-group">
                             <mat-form-field>
                                 <mat-label>Resulting Personnel</mat-label>
                                 <input matInput formControlName="resultingPersonnel" 
                                     id = "resultingPersonnel" 
                                     required="false">
                             </mat-form-field>
-                        </div>
-                        <div class="form-group">
-                            <mat-form-field>
-                                <mat-label>Resulting Datetime</mat-label>                                
-                                <input matInput formControlName="resultingDateTime" 
-                                    id = "resultingDateTime" 
-                                    required="true">                                
-                            </mat-form-field>
+                        </fieldset>
+                        <div class="row form-group">
+                            <fieldset disabled>
+                                <mat-form-field>
+                                    <mat-label>Resulting Datetime</mat-label>                                
+                                    <input matInput formControlName="resultingDateTime" 
+                                        id = "resultingDateTime" 
+                                        required="true">                                
+                                </mat-form-field>
+                            </fieldset>
                             <button type="button" class="btn btn-success" (click)="now()">Now</button>
                         </div>
                     </div>
-                    <div class="row"> 
-                        <div class="form-group">          
-                            <mat-form-field formGroupName="instrument">
-                                <mat-label>Instrument</mat-label>                              
-                                <input matInput formControlName="name" 
-                                    id = "instrument">
-                            </mat-form-field>
+                    <fieldset disabled>
+                        <div class="row"> 
+                            <div class="form-group">          
+                                <mat-form-field formGroupName="instrument">
+                                    <mat-label>Instrument</mat-label>                              
+                                    <input matInput formControlName="name" 
+                                        id = "instrument">
+                                </mat-form-field>
+                            </div>
+                            <div class="form-group">
+                                <mat-form-field>
+                                    <mat-label>Batch Size</mat-label>
+                                    <input matInput
+                                        formControlName="instrumentBatchSize" 
+                                        id = "instrumentBatchSize" style="text-align: right">
+                                </mat-form-field>
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <mat-form-field>
-                                <mat-label>Batch Size</mat-label>
-                                <input matInput
-                                    formControlName="instrumentBatchSize" 
-                                    id = "instrumentBatchSize" style="text-align: right">
-                            </mat-form-field>
-                        </div>
-                    </div>
+                    </fieldset>
                     <div class="form-group">          
                         <mat-form-field>
                             <mat-label>Resulting Status</mat-label>
