--- a/angular/src/app/view/testing-detection/testing-detection.component.html
+++ b/angular/src/app/view/testing-detection/testing-detection.component.html
@@ -23,8 +23,10 @@
                                 <button type="button" class="btn btn-success" (click)="newDetectionBatch()">New</button>
                             </div>
                             <div class="form-group"> 
-                                <span *ngIf="pulling" class="spinner-border spinner-border-sm mr-1"></span>
-                                <button type="button" class="btn btn-success" (click)="pullSpecimenInfo()">Pull</button>
+                                <button type="button" class="btn btn-success" (click)="pullSpecimenInfo()">
+                                    <span *ngIf="pulling" class="spinner-border spinner-border-sm mr-1"></span>
+                                    Pull
+                                </button>
                             </div>
                         </div>
                         <div class="row">
