--- a/angular/src/app/view/verification/verification.component.html
+++ b/angular/src/app/view/verification/verification.component.html
@@ -40,51 +40,56 @@
                         </div>
                     </fieldset>
                     <div class="row">  
-                        <div class="form-group">
+                        <fieldset disabled class="form-group">
                             <mat-form-field>
                                 <mat-label>Verification Personnel</mat-label>
                                 <input matInput formControlName="verificationPersonnel" id = "verificationPersonnel">
                             </mat-form-field>
-                        </div>
-                        <div class="form-group">
-                            <mat-form-field>
-                                <mat-label>Verification Datetime</mat-label>                                
-                                <input matInput formControlName="verificationDateTime" id = "verificationDateTime">                                
-                            </mat-form-field>
+                        </fieldset>
+                        <div class="row form-group">
+                            <fieldset disabled>
+                                <mat-form-field>
+                                    <mat-label>Verification Datetime</mat-label>                                
+                                    <input matInput formControlName="verificationDateTime" id = "verificationDateTime">                                
+                                </mat-form-field>
+                            </fieldset>
                             <button type="button" class="btn btn-success" (click)="now()">Now</button>
                         </div>
                     </div>
                     <div class="row">  
-                        <div class="form-group">
+                        <fieldset disabled class="form-group">
                             <mat-form-field>
                                 <mat-label>Authorising Personnel</mat-label>
                                 <input matInput formControlName="authorisingPersonnel" id = "authorisingPersonnel" >
                             </mat-form-field>
-                        </div>
-                        <div class="form-group">
-                            <mat-form-field>
-                                <mat-label>Authorising Datetime</mat-label>                                
-                                <input matInput formControlName="authorisingDateTime" id = "authorisingDateTime" >                                
-                            </mat-form-field>
+                        </fieldset>
+                        <div class="row form-group">
+                            <fieldset disabled>
+                                <mat-form-field>
+                                    <mat-label>Authorising Datetime</mat-label>                                
+                                    <input matInput formControlName="authorisingDateTime" id = "authorisingDateTime" >                                
+                                </mat-form-field>
+                            </fieldset>
                             <button type="button" class="btn btn-success" (click)="authorise()">Now</button>
                         </div>
                     </div>
-                    <div class="row"> 
-                        <div class="form-group">          
-                            <mat-form-field formGroupName="instrument">
-                                <mat-label>Instrument</mat-label>        
-                                <input matInput formControlName="name" 
-                                    id = "instrument">   
-                            </mat-form-field>
+                    <fieldset disabled>
+                        <div class="row"> 
+                            <div class="form-group">          
+                                <mat-form-field formGroupName="instrument">
+                                    <mat-label>Instrument</mat-label>        
+                                    <input matInput formControlName="name" 
+                                        id = "instrument">   
+                                </mat-form-field>
+                            </div>
+                            <div class="form-group">
+                                <mat-form-field>
+                                    <mat-label>Batch Size</mat-label>
+                                    <input matInput formControlName="instrumentBatchSize" id = "instrumentBatchSize" >
+                                </mat-form-field>
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <mat-form-field>
-                                <mat-label>Batch Size</mat-label>
-                                <input matInput
-                                    formControlName="instrumentBatchSize" id = "instrumentBatchSize" >
-                            </mat-form-field>
-                        </div>
-                    </div>
+                    </fieldset>
                     <div class="form-group">          
                         <mat-form-field>
                             <mat-label>Verification Status</mat-label>
