--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -307,7 +307,7 @@
   />
   <span>Detection, Resulting and Verification</span>
     <div class="spacer"></div>
-    <div *ngIf="isLoggedIn$ | async">
+    <div *ngIf="isLogggedIn()">
       <button type="button" (click)="changeForm('/location')" class="btn btn-danger">Location</button>
       <button type="button" (click)="changeForm('/detection')" class="btn btn-danger">Detection</button>
       <button type="button" (click)="changeForm('/resulting')" class="btn btn-danger">Resulting</button>
@@ -316,7 +316,7 @@
 
     <div class="spacer"></div>
     <div>
-      <div *ngIf="isLoggedIn$ | async">
+      <div *ngIf="isLogggedIn()">
         {{ getUser() }}
         <button type="button" (click)="logout()" class="btn btn-danger" >Logout</button>
       </div>
