--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -45,3 +45,6 @@ main.content.col-md-24{ border: 2px solid gray; padding: 3rem; border-radius: 1r
 
 .mat-form-field { padding-right: 4rem; }
 
+.mat-tab-group {
+    width: 800px;
+}
