--- a/angular/src/app/view/verification/verification.component.html
+++ b/angular/src/app/view/verification/verification.component.html
@@ -201,14 +201,19 @@
         <button type="button" class="btn btn-success" (click)="clearSearch()">Clear</button>
       </div>
       <div class="mat-elevation-z8">
-        <mat-table matSort [dataSource]="batches" #BatchesSort="matSort" class="table table-bordered table-striped"
+        <div class="overlay">
+          <div class="center">
+            <mat-progress-bar [mode]="'indeterminate'" *ngIf="spLoading"></mat-progress-bar>
+          </div>
+        </div>
+        <mat-table matSort [dataSource]="batches" #batchesSort="matSort" class="table table-bordered table-striped"
           style="width: 100%;">
 
           <ng-container matColumnDef=" ">
             <mat-header-cell *matHeaderCellDef></mat-header-cell>
             <mat-cell *matCellDef="let row">
               <div class="form-group">
-                <button class="btn btn-info" (click)="editBatch(row)">
+                <button class="btn btn-info" (click)="editBatch(row, true)">
                   <mat-icon>edit</mat-icon>
                 </button>
               </div>
@@ -249,7 +254,7 @@
           <mat-row *matRowDef="let row; columns: searchColumns;"></mat-row>
 
         </mat-table>
-        <mat-paginator #BatchesPaginator="matPaginator" [pageSize]="10" [pageSizeOptions]="[5, 10, 15]"
+        <mat-paginator #batchesPaginator="matPaginator" [pageSize]="10" [pageSizeOptions]="[5, 10, 15]"
           showFirstLastButtons>
 
         </mat-paginator>
