--- a/angular/src/app/view/testing-detection/testing-detection.component.html
+++ b/angular/src/app/view/testing-detection/testing-detection.component.html
@@ -141,6 +141,21 @@
                   <mat-header-cell *matHeaderCellDef>Patient Id</mat-header-cell>
                   <mat-cell *matCellDef="let row"> {{ row.get('patient.identity_no').value }} </mat-cell>
                 </ng-container>
+                <ng-container matColumnDef="add_control">
+                  <mat-header-cell *matHeaderCellDef>Control</mat-header-cell>                  
+                  <mat-cell *matCellDef="let row">
+                    <div class="form-group" disable="true">
+                      <fieldset disable="true" class="form-group">
+                        <button title="Add +ve Control Specimen" type="button" class="btn btn-info" (click)="addControl(row.get('position').value, row.get('specimen_barcode').value, 'C0000000001')">
+                          <mat-icon>add</mat-icon>
+                        </button>
+                        <button title="Add -ve Control Specimen" type="button" class="btn btn-info" (click)="addControl(row.get('position').value, row.get('specimen_barcode').value, 'C0000000002')">
+                          <mat-icon>remove</mat-icon>
+                        </button>
+                      </fieldset>
+                    </div>
+                  </mat-cell>
+                </ng-container>
                 <mat-header-row *matHeaderRowDef="specimenColumns"></mat-header-row>
                 <mat-row *matRowDef="let row; columns: specimenColumns;"></mat-row>
               </mat-table>
@@ -182,7 +197,7 @@
         </form>
       </div>
       <div class="form-group">
-        <button class="btn btn-success" (click)="searchBatches()">
+        <button class="btn btn-success" (click)="doSearch()">
           <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
           Search
         </button>
@@ -201,7 +216,7 @@
             <mat-header-cell *matHeaderCellDef></mat-header-cell>
             <mat-cell *matCellDef="let row">
               <div class="form-group">
-                <button type="button" class="btn btn-info" (click)="editBatch(row, true)">
+                <button type="button" class="btn btn-info" (click)="doEditBatch(row)">
                   <mat-icon>edit</mat-icon>
                 </button>
               </div>
