--- a/angular/src/app/view/verification/verification.component.html
+++ b/angular/src/app/view/verification/verification.component.html
@@ -26,7 +26,10 @@
               </button>
             </div>
             <div class="form-group">
-              <button class="btn btn-success" [disabled]="verified()" (click)="publish()">Publish</button>
+              <button class="btn btn-success" [disabled]="verified()" (click)="publish()">
+                <span *ngIf="publishing" class="spinner-border spinner-border-sm mr-1"></span>
+                Publish
+              </button>
             </div>
           </div>
           <fieldset disabled>
@@ -140,7 +143,7 @@
                   <mat-header-cell *matHeaderCellDef>Verify Results</mat-header-cell>
                   <mat-cell *matCellDef="let row" [formGroup]="row">
                     <mat-form-field>
-                      <mat-select formControlName="testVerifyResults" id="testVerifyResults">
+                      <mat-select formControlName="testVerifyResults" id="testVerifyResults" (selectionChange)="onVerifySelectionChange(row.value, $event)">
                         <mat-option value="" selected></mat-option>
                         <mat-option value="5" selected>Verified</mat-option>
                         <mat-option value="6" selected>Not Accepted</mat-option>
@@ -194,7 +197,7 @@
         </form>
       </div>
       <div class="form-group">
-        <button class="btn btn-success" (click)="searchBatches()">
+        <button class="btn btn-success" (click)="doSearch()">
           <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
           Search
         </button>
@@ -213,7 +216,7 @@
             <mat-header-cell *matHeaderCellDef></mat-header-cell>
             <mat-cell *matCellDef="let row">
               <div class="form-group">
-                <button class="btn btn-info" (click)="editBatch(row, true)">
+                <button class="btn btn-info" (click)="doEditBatch(row)">
                   <mat-icon>edit</mat-icon>
                 </button>
               </div>
