--- a/springws/src/main/resources/reports/detection_batch_barcodes.jrxml
+++ b/springws/src/main/resources/reports/detection_batch_barcodes.jrxml
@@ -1,22 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.13.0.final using JasperReports Library version 6.13.0-46ada4d1be8f3c5985fd0b6146f3ed44caed6f05  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="detection_batch_barcodes" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="014cfcc1-da88-4fe5-b08f-b46f472b2742">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="detection_batch_barcodes" columnCount="6" printOrder="Horizontal" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="133" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="014cfcc1-da88-4fe5-b08f-b46f472b2742">
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
+	<field name="position" class="java.lang.String"/>
+	<field name="specimenBarcode" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
-	<title>
-		<band height="79" splitType="Stretch"/>
-	</title>
-	<pageHeader>
-		<band height="35" splitType="Stretch"/>
-	</pageHeader>
 	<detail>
-		<band height="125" splitType="Stretch"/>
+		<band height="55" splitType="Stretch">
+			<textField>
+				<reportElement x="42" y="0" width="34" height="20" uuid="b2569fac-1074-417e-8aa3-5e4c450c43c8"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle" markup="html">
+					<font size="11"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{position}]]></textFieldExpression>
+			</textField>
+			<componentElement>
+				<reportElement x="2" y="22" width="115" height="27" uuid="4f869d68-d047-4b1b-bca7-a889e2492663"/>
+				<jr:barbecue xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" type="Code128B" drawText="true" checksumRequired="false">
+					<jr:codeExpression><![CDATA[$F{specimenBarcode}]]></jr:codeExpression>
+					<jr:applicationIdentifierExpression><![CDATA[$F{specimenBarcode}]]></jr:applicationIdentifierExpression>
+				</jr:barbecue>
+			</componentElement>
+			<textField>
+				<reportElement x="10" y="30" width="100" height="20" uuid="68820d1c-acef-4391-9c88-21ccb6c7a82f"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{specimenBarcode}]]></textFieldExpression>
+			</textField>
+		</band>
 	</detail>
-	<summary>
-		<band height="42" splitType="Stretch"/>
-	</summary>
 </jasperReport>
