--- a/angular/src/app/view/testing-detection/testing-detection.component.html
+++ b/angular/src/app/view/testing-detection/testing-detection.component.html
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
               <button type="button" class="btn btn-success" (click)="createReport()">
-                <span *ngIf="pulling" class="spinner-border spinner-border-sm mr-1"></span>
+                <span *ngIf="printing" class="spinner-border spinner-border-sm mr-1"></span>
                 Print
               </button>
             </div>
